--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "env": {
       "es6": true,
       "browser": true,
-      "jquery": true
+      "jquery": true,
+      "node": true
       },
       "rules": {
         "semi": 1,
